# wagtail-icons

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  rsbuild.config.ts  tailwind.config.js
.github/workflows/: publish.yml
src/wagtail_icons/: blocks.py  forms.py  models.py  services.py  views.py  wagtail_hooks.py  widgets.py
src/wagtail_icons/components/: base.py  icon.py  icon_grid.py
src/wagtail_icons/management/commands/: populate_icons.py
src/wagtail_icons/migrations/: 0001_initial.py
src/wagtail_icons/providers/: base.py  boxicons.py  fontawesome.py  github_provider.py  heroicons.py  tabler.py
src/wagtail_icons/static/wagtailicons/: main.html
src/wagtail_icons/static/wagtailicons/css/: main.css
src/wagtail_icons/static/wagtailicons/js/: main.js
src/wagtail_icons/static_src/: index.js
src/wagtail_icons/templates/icon_chooser/: listing.html  query.html  results.html
tests/: manage.py
tests/testapp/: apps.py  models.py  settings.py
tests/testapp/migrations/: 0001_initial.py
